[package]
name = "dll-crab"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.18.0"
rfd = "0.8.2"
windows = { version = "0.35.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Threading", "Win32_Security"] }
sysinfo = "0.23.11"