[package]
name = "dll-crab"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.18.0"
rfd = "0.8.2"
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "memoryapi", "libloaderapi", "synchapi", "handleapi", "winuser"] }
sysinfo = "0.23.11"