[package]
name = "dll-crab"
version = "1.2.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "dll-crab.exe"
LegalCopyright = "Copyright © 2022"
FileDescription = "Rusty DLL Injector with GUI"
ProductName = "DLL Crab"
ProductVersion = "1.2.0.0"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.18.0"
rfd = "0.8.2"
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "memoryapi", "libloaderapi", "synchapi", "handleapi", "winuser", "tlhelp32"] }
sysinfo = "0.23.11"
ntapi = "0.3.7"